fix a few test bugs